newSite/header.css
header {
  padding: 3rem;
}

header h1 {
  margin: 0 0 2rem;
  text-align: center;
  font-size: 4rem;
  font-weight: lighter;
}

header img#profile-pic {
  max-width: 100%;
  margin-bottom: 2rem;
}

header ul#subtitle {
  margin: 0 0 2rem;
  line-height: 1.8;
  font-size: 2.4rem;
  font-weight: lighter;
  list-style: none;
}

header ul#subtitle svg {
  position: absolute;
  margin-left: -5rem;
  margin-top: 1.2rem;
  width: 3rem;
  height: 3rem;
  fill: hsl(0, 0%, 80%);
}

header ul#socials {
  margin: 0;
  padding: 0;
  list-style: none;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  width: 28rem;
}

header ul#socials svg {
  width: 6.4rem;
  height: 6.4rem;
  fill: hsl(0, 0%, 80%);
}

@media (min-width: 43.75em) { /* 700px / 16 */
  header {
    padding-top: 5rem;
    grid-template-columns: 40% 60%;
    grid-template-rows: auto auto auto;
    grid-template-areas:
      "img title"
      "img subtitle"
      "img socials";
    justify-items: center;
  }
  header img#profile-pic {
    grid-area: img;
  }
  header h1 {
    grid-area: title;
    font-size: 6.4rem;
    margin: 0;
  }
  header ul#subtitle {
    grid-area: subtitle;
    font-size: 3.2rem;
  }
  header ul#socials {
    grid-area: socials;
    align-self: baseline;
  }
}

